--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:zhWAFMacV1yKJp3BzKEB+WeIV+UTdGhpg3Zadq9CLig=
 APP_DEBUG=true
-APP_URL=https://tranquil-shelf-79713.herokuapp.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
