--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^7.2",
-        "laravel/tinker": "^1.0",
-        "tightenco/ziggy": "^0.6.9"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
